--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
                     <div class="campo">
                         <span class="material-symbols-outlined">
                             person
-                            </span>
-                        <input type="email" name="login" id="ilogin" placeholder="email" autocomplete="email" required maxlength="30">
-                        <label for="ilogin">Logim</label>
+                        </span>
+                        <input type="email" name="login" id="ilogin" placeholder="email" autocomplete="email" required maxlength="40">
+                        <label for="ilogin">
+                            Logim
+                        </label>
                     </div>
                     <div class="campo">
                         <span class="material-symbols-outlined">
                             vpn_key
-                            </span>
-                        <input type="password" name="senha" id="isenha" placeholder="senha" autocomplete="current-password" required minlength="8">
+                        </span>
+                        <input type="password" name="senha" id="isenha" placeholder="senha" autocomplete="current-password" required minlength="8" maxlength="40">
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
